--- a/app/src/main/res/layout/fragment_cycling_logs_list.xml
+++ b/app/src/main/res/layout/fragment_cycling_logs_list.xml
@@ -10,5 +10,5 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context=".ui.log.portrait.CyclingLogsFragment"
+        tools:context=".ui.log.list.portrait.CyclingLogsFragment"
         tools:listitem="@layout/fragment_cycling_logs"/>
