--- a/app/src/main/res/layout/fragment_running_logs.xml
+++ b/app/src/main/res/layout/fragment_running_logs.xml
@@ -1,20 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-        >
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-            android:id="@+id/item_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem"/>
+    <data>
 
-    <TextView
-            android:id="@+id/content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem"/>
-</LinearLayout>
+        <variable
+                name="data"
+                type="com.softhouse.workingout.data.db.Running"/>
+
+    </data>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:orientation="horizontal">
+
+        <ImageView
+                android:scaleType="centerCrop"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                app:srcCompat="@drawable/shoe_sneaker"
+                />
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            <TextView
+                    android:id="@+id/text_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:layout_margin="8dp"
+                    android:lines="1"
+                    android:textStyle="bold"
+                    android:textSize="24sp"
+                    android:text='@{`` + data.steps + " steps"}'/>
+
+            <TextView
+                    android:id="@+id/text_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:layout_margin="8dp"
+                    android:lines="1"
+                    android:textSize="16sp"
+                    android:text='@{`` + data.steps + " steps"}'/>
+
+            <View
+                    style="@style/Divider"
+                    android:id="@+id/divider"
+                    android:layout_marginTop="@dimen/text_margin"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+</layout>
