--- a/app/src/main/res/layout/fragment_detail_running.xml
+++ b/app/src/main/res/layout/fragment_detail_running.xml
@@ -9,6 +9,11 @@
                 name="dto"
                 type="com.softhouse.workingout.ui.log.dto.RunningDTO"/>
 
+        <variable
+                name="show"
+                type="Boolean"/>
+
+        <import type="android.view.View"/>
     </data>
 
     <FrameLayout
@@ -39,6 +44,7 @@
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:text='@{dto.startWorkout}'
+                        android:visibility="@{show ? View.VISIBLE : View.GONE}"
                         android:layout_margin="@dimen/text_margin"
                         android:textSize="18sp"
                         android:textAlignment="center"/>
@@ -46,7 +52,17 @@
                 <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
+                        android:text='No Content to display'
+                        android:visibility="@{show ? View.GONE : View.VISIBLE}"
+                        android:layout_margin="@dimen/text_margin"
+                        android:textSize="24sp"
+                        android:textAlignment="center"/>
+
+                <TextView
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
                         android:text="-"
+                        android:visibility="@{show ? View.VISIBLE : View.GONE}"
                         android:layout_margin="@dimen/text_margin"/>
 
                 <TextView
@@ -54,6 +70,7 @@
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:text='@{dto.endWorkout}'
+                        android:visibility="@{show ? View.VISIBLE : View.GONE}"
                         android:layout_margin="@dimen/text_margin"
                         android:textSize="18sp"/>
             </LinearLayout>
@@ -63,6 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:text='@{dto.duration}'
+                    android:visibility="@{show ? View.VISIBLE : View.GONE}"
                     android:textSize="24sp"
                     android:layout_marginTop="@dimen/text_margin"
                     android:layout_marginBottom="@dimen/text_margin"
@@ -73,6 +91,7 @@
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:text='@{`` + dto.steps}'
+                    android:visibility="@{show ? View.VISIBLE : View.GONE}"
                     android:layout_margin="@dimen/text_margin"
                     android:textSize="40sp"
                     android:layout_weight="0.25"
@@ -87,6 +106,7 @@
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:text="steps"
+                    android:visibility="@{show ? View.VISIBLE : View.GONE}"
                     android:textSize="24sp"
                     android:layout_weight="0.25"
                     android:textAlignment="center"
