--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -56,7 +56,7 @@
 
     <fragment
             android:id="@+id/navigation_logs_running"
-            android:name="com.softhouse.workingout.ui.log.list.portrait.RunningLogsFragment"
+            android:name="com.softhouse.workingout.ui.log.list.RunningLogsFragment"
             android:label="Running Logs"
             tools:layout="@layout/fragment_running_logs">
         <argument
@@ -76,11 +76,16 @@
                 app:destination="@id/navigation_running_detail"
                 app:popUpToInclusive="false"
                 app:popUpTo="@id/navigation_logs_running"/>
+        <action
+                android:id="@+id/action_navigation_logs_running_to_navigation_logs_cycling_two_pane"
+                app:destination="@id/navigation_logs_cycling_two_pane"
+                app:popUpTo="@id/navigation_calender"
+                app:popUpToInclusive="false"/>
     </fragment>
 
     <fragment
             android:id="@+id/navigation_logs_cycling"
-            android:name="com.softhouse.workingout.ui.log.list.portrait.CyclingLogsFragment"
+            android:name="com.softhouse.workingout.ui.log.list.CyclingLogsFragment"
             android:label="Cycling Logs"
             tools:layout="@layout/fragment_cycling_logs">
         <argument
@@ -100,6 +105,25 @@
                 app:destination="@id/navigation_cycling_detail"
                 app:popUpToInclusive="false"
                 app:popUpTo="@id/navigation_logs_cycling"/>
+    </fragment>
+
+    <fragment
+            android:id="@+id/navigation_logs_cycling_two_pane"
+            android:name="com.softhouse.workingout.ui.log.list.TwoPaneCyclingLogsFragment"
+            android:label="Cycling Logs"
+            tools:layout="@layout/fragment_two_pane_running_logs">
+        <argument
+                android:name="day"
+                app:argType="integer"
+                android:defaultValue="-1"/>
+        <argument
+                android:name="month"
+                app:argType="integer"
+                android:defaultValue="-1"/>
+        <argument
+                android:name="year"
+                app:argType="integer"
+                android:defaultValue="-1"/>
     </fragment>
 
     <fragment
