--- a/app/src/main/res/layout/fragment_two_pane_running_logs.xml
+++ b/app/src/main/res/layout/fragment_two_pane_running_logs.xml
@@ -4,9 +4,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
 
     <androidx.slidingpanelayout.widget.SlidingPaneLayout
             android:id="@+id/sliding_pane_layout"
@@ -15,19 +12,20 @@
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_pane"
-                android:layout_width="280dp"
+                android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
                 app:layoutManager="LinearLayoutManager"
+                class="com.softhouse.workingout.ui.log.portrait.RunningLogsFragment"
                 tools:context=".ui.log.list.RunningLogsFragment"
                 tools:listitem="@layout/fragment_running_logs"/>
 
         <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/detail_container"
-                android:layout_width="300dp"
+                android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:background="#ff333333"
-                android:name="com.softhouse.workingout.ui.log.DetailRunningFragment"/>
+                android:background="#ffffff"
+                class="com.softhouse.workingout.ui.log.DetailRunningFragment"/>
     </androidx.slidingpanelayout.widget.SlidingPaneLayout>
 </layout>
