--- a/app/src/main/res/layout/fragment_running_logs.xml
+++ b/app/src/main/res/layout/fragment_running_logs.xml
@@ -24,7 +24,7 @@
                 />
 
         <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
