--- a/app/src/main/res/layout/fragment_two_pane_running_logs.xml
+++ b/app/src/main/res/layout/fragment_two_pane_running_logs.xml
@@ -12,8 +12,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_pane"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 app:layoutManager="LinearLayoutManager"
                 class="com.softhouse.workingout.ui.log.portrait.RunningLogsFragment"
