--- a/app/src/main/res/layout/fragment_detail_running_pane.xml
+++ b/app/src/main/res/layout/fragment_detail_running_pane.xml
@@ -34,7 +34,7 @@
             <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    android:text='No Content to display'
+                    android:text='No Content'
                     android:visibility="@{show ? View.GONE : View.VISIBLE}"
                     android:layout_margin="@dimen/text_margin"
                     android:textSize="24sp"
