--- a/app/src/main/res/layout/fragment_two_pane_cycling_logs.xml
+++ b/app/src/main/res/layout/fragment_two_pane_cycling_logs.xml
@@ -1,14 +1,31 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".ui.log.list.TwoPaneCyclingLogsFragment">
+<!-- two_pane.xml -->
+<layout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <androidx.slidingpanelayout.widget.SlidingPaneLayout
+            android:id="@+id/sliding_pane_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:layout_height="match_parent">
 
-</FrameLayout>
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_pane"
+                android:layout_width="240dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                app:layoutManager="LinearLayoutManager"
+                class="com.softhouse.workingout.ui.log.portrait.CyclingLogsFragment"
+                tools:context=".ui.log.list.CyclingLogsFragment"
+                tools:listitem="@layout/fragment_cycling_logs"/>
+
+        <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/detail_container"
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:background="#ffffff"
+                class="com.softhouse.workingout.ui.log.list.DetailCyclingPaneFragment"/>
+    </androidx.slidingpanelayout.widget.SlidingPaneLayout>
+</layout>
