--- a/app/src/main/res/layout/fragment_detail_cycling_pane.xml
+++ b/app/src/main/res/layout/fragment_detail_cycling_pane.xml
@@ -16,13 +16,6 @@
         <import type="android.view.View"/>
     </data>
 
-    <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            class="com.softhouse.workingout.ui.log.DetailRunningFragment"
-            tools:context=".ui.log.DetailRunningFragment">
-
-
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -40,24 +33,12 @@
                     android:textSize="24sp"
                     android:textAlignment="center"/>
 
-            <TextView
-                    android:id="@+id/text_duration"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:text='@{dto.duration}'
-                    android:visibility="@{show ? View.VISIBLE : View.GONE}"
-                    android:textSize="18sp"
-                    android:layout_marginTop="@dimen/text_margin"
-                    android:layout_marginBottom="@dimen/text_margin"
-                    />
-
             <com.google.android.gms.maps.MapView
                     android:id="@+id/mapView"
-                    android:layout_width="300dp"
-                    android:layout_height="200dp"
+                    android:layout_width="350dp"
+                    android:layout_height="150dp"
                     android:visibility="@{show ? View.VISIBLE : View.INVISIBLE}"
-                    android:layout_weight="0.2"
-                    android:layout_margin="@dimen/activity_horizontal_margin"/>
+                    android:layout_weight="0.2"/>
 
             <TextView
                     android:id="@+id/text_distance"
@@ -67,11 +48,8 @@
                     android:visibility="@{show ? View.VISIBLE : View.GONE}"
                     android:textSize="14sp"
                     android:layout_weight="0.25"
-                    android:layout_margin="@dimen/activity_horizontal_margin"
                     android:textStyle="bold"
                     android:textAlignment="center"/>
 
         </LinearLayout>
-
-    </FrameLayout>
 </layout>
