--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="grey">#808080</color>
-    <color name="lightBlue">#80D8FF</color>
+    <color name="lightBlue">#DCF1F7</color>
 </resources>
