adding divider for horizontal view

--- a/app/src/main/res/layout/fragment_two_pane_cycling_logs.xml
+++ b/app/src/main/res/layout/fragment_two_pane_cycling_logs.xml
@@ -20,6 +20,11 @@
                 tools:context=".ui.log.list.CyclingLogsFragment"
                 tools:listitem="@layout/fragment_cycling_logs"/>
 
+        <View
+                style="@style/Divider_Horizontal"
+                android:id="@+id/divider"
+                android:layout_marginTop="@dimen/text_margin" android:layout_width="5dp"/>
+
         <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/detail_container"
                 android:layout_width="wrap_content"
