--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,4 +55,10 @@
         <item name="android:background">?android:attr/listDivider</item>
     </style>
 
+    <style name="Divider_Horizontal">
+        <item name="android:layout_width">2dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">?android:attr/listDivider</item>
+    </style>
+
 </resources>
