--- a/app/src/main/res/layout/fragment_detail_cycling_pane.xml
+++ b/app/src/main/res/layout/fragment_detail_cycling_pane.xml
@@ -16,40 +16,67 @@
         <import type="android.view.View"/>
     </data>
 
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_gravity="center"
+    >
+
+        <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text='No Content'
+                android:visibility="@{show ? View.GONE : View.VISIBLE}"
+                android:layout_margin="@dimen/text_margin"
+                android:textSize="24sp"
+                android:textAlignment="center"/>
+
         <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:gravity="center"
                 android:layout_gravity="center"
-                >
-
-            <TextView
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:text='No Content'
-                    android:visibility="@{show ? View.GONE : View.VISIBLE}"
-                    android:layout_margin="@dimen/text_margin"
-                    android:textSize="24sp"
-                    android:textAlignment="center"/>
+        >
 
             <com.google.android.gms.maps.MapView
                     android:id="@+id/mapView"
                     android:layout_width="350dp"
-                    android:layout_height="150dp"
+                    android:layout_height="250dp"
                     android:visibility="@{show ? View.VISIBLE : View.INVISIBLE}"
-                    android:layout_weight="0.2"/>
+                    android:layout_weight="0.2"
+            />
 
-            <TextView
-                    android:id="@+id/text_distance"
+            <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:text='@{`` + dto.distance + " meter(s)"}'
-                    android:visibility="@{show ? View.VISIBLE : View.GONE}"
-                    android:textSize="14sp"
-                    android:layout_weight="0.25"
-                    android:textStyle="bold"
-                    android:textAlignment="center"/>
+                    android:orientation="vertical"
+            >
 
+                <TextView
+                        android:id="@+id/text_distance"
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:text='@{`` + dto.distance}'
+                        android:visibility="@{show ? View.VISIBLE : View.GONE}"
+                        android:textSize="28sp"
+                        android:layout_weight="0.15"
+                        android:textStyle="bold"
+                        android:textAlignment="textEnd"/>
+
+                <TextView
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:text=" meter(s)"
+                        android:visibility="@{show ? View.VISIBLE : View.GONE}"
+                        android:textSize="14sp"
+                        android:layout_weight="0.15"
+                        android:textStyle="bold"
+                        android:textAlignment="textEnd"/>
+            </LinearLayout>
         </LinearLayout>
+
+    </LinearLayout>
 </layout>
