--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,21 +5,10 @@
         <item name="colorPrimary">#536dfe</item>
         <item name="colorPrimaryDark">#0043ca</item>
         <item name="colorAccent">#f9a825</item>
-        <!--        <item name="colorPrimary">#212121</item>-->
-        <!--        <item name="colorPrimaryVariant">#000000</item>-->
-        <!--        <item name="colorOnPrimary">#FFFFFF</item>-->
-        <!--        <item name="colorSecondary">#2962FF</item>-->
-        <!--        <item name="colorSecondaryVariant">#0039CB</item>-->
-        <!--        <item name="colorOnSecondary">#FFFFFF</item>-->
-        <!--        <item name="colorError">#F44336</item>-->
-        <!--        <item name="colorOnError">#FFFFFF</item>-->
-        <!--        <item name="colorSurface">#FFFFFF</item>-->
-        <!--        <item name="colorOnSurface">#212121</item>-->
-        <!--        <item name="colorOnBackground">#212121</item>-->
         <item name="android:windowActionBarOverlay">true</item>
 
-        <item name="fontFamily">@font/roboto_mono</item>
-        <item name="android:fontFamily">@font/roboto_mono</item>
+<!--        <item name="fontFamily">@font/roboto_mono</item>-->
+<!--        <item name="android:fontFamily">@font/roboto_mono</item>-->
 
         <item name="materialCardViewStyle">@style/AppCard</item>
         <item name="toolbarStyle">@style/Widget.App.Toolbar</item>
