history log redesign

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black_overlay">#66000000</color>
     <color name="lightBlue">#DCF1F7</color>
+    <color name="lightBlueSecondary">#aabec4</color>
 </resources>
