--- a/app/src/main/res/layout/fragment_cycling_logs.xml
+++ b/app/src/main/res/layout/fragment_cycling_logs.xml
@@ -9,51 +9,187 @@
                 type="com.softhouse.workingout.data.db.Cycling"/>
     </data>
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:orientation="horizontal">
-
-        <ImageView
-                android:scaleType="centerCrop"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                app:srcCompat="@drawable/bike"
-                />
-
+    <com.google.android.material.card.MaterialCardView
+            android:id="@+id/card"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
+            android:layout_margin="5dp"
+            app:cardCornerRadius="15dp"
+            app:cardUseCompatPadding="true"
+    >
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-            <TextView
-                    android:id="@+id/text_title"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+        >
+            <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:layout_margin="8dp"
-                    android:lines="1"
-                    android:textStyle="bold"
-                    android:textSize="24sp"
-                    android:text='@{`` + data.distanceInMeters + " m"}'/>
+                    android:layout_height="80dp"
+                    android:background="@color/lightBlueSecondary"
+                    android:orientation="vertical"
+                    android:layout_margin="0dp"
+            >
+                <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal"
+                        app:srcCompat="@drawable/bike"
+                />
+            </LinearLayout>
 
-            <TextView
-                    android:id="@+id/text_detail"
+            <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:layout_margin="8dp"
-                    android:lines="1"
-                    android:textSize="16sp"
-                    android:text='@{`` + data.distanceInMeters + " m"}'/>
+                    android:layout_height="120dp"
+                    android:layout_margin="0dp"
+                    android:orientation="horizontal"
+            >
+                <LinearLayout
+                        android:layout_width="75dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/lightBlueSecondary"
+                >
+                    <com.google.android.material.card.MaterialCardView
+                            android:layout_width="75dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="10dp"
+                            app:cardCornerRadius="5dp"
+                            app:cardUseCompatPadding="true"
 
-            <View
-                    style="@style/Divider"
-                    android:id="@+id/divider"
-                    android:layout_marginTop="@dimen/text_margin"/>
+                    >
+                        <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical"
+                                android:background="@color/lightBlue"
+                        >
+                            <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="30dp"
+                                    android:orientation="horizontal"
+                            >
+                                <ImageView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        app:srcCompat="@drawable/outline_hourglass_bottom_24"
+                                >
+                                </ImageView>
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                            >
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+                    </com.google.android.material.card.MaterialCardView>
+                </LinearLayout>
+
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/lightBlueSecondary"
+                >
+                    <com.google.android.material.card.MaterialCardView
+                            android:layout_width="75dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="10dp"
+
+                            app:cardCornerRadius="5dp"
+                            app:cardUseCompatPadding="true"
+                    >
+                        <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical"
+                                android:background="@color/lightBlue"
+                        >
+                            <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="30dp"
+                                    android:orientation="horizontal"
+                            >
+                                <ImageView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="30dp"
+                                        android:layout_gravity="center_vertical"
+                                        app:srcCompat="@drawable/outline_moving_24"
+                                >
+                                </ImageView>
+                            </LinearLayout>
+
+                            <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                            >
+                                <TextView
+                                        android:id="@+id/text_detail"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:gravity="center"
+                                        android:lines="1"
+                                        android:textSize="24sp"
+                                        android:text='@{`` + data.distanceInMeters + " m"}'>
+                                </TextView>
+                            </LinearLayout>
+
+                        </LinearLayout>
+                    </com.google.android.material.card.MaterialCardView>
+                </LinearLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
 
-    </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
+
+<!--    <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="90dp"-->
+<!--            android:orientation="horizontal">-->
+
+<!--        <ImageView-->
+<!--                android:scaleType="centerCrop"-->
+<!--                android:layout_width="90dp"-->
+<!--                android:layout_height="90dp"-->
+<!--                app:srcCompat="@drawable/bike"-->
+<!--                />-->
+
+<!--        <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical">-->
+
+<!--            <TextView-->
+<!--                    android:id="@+id/text_title"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:gravity="center_vertical"-->
+<!--                    android:layout_margin="8dp"-->
+<!--                    android:lines="1"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:textSize="24sp"-->
+<!--                    android:text='@{`` + data.distanceInMeters + " m"}'/>-->
+
+<!--            <TextView-->
+<!--                    android:id="@+id/text_detail"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:gravity="center_vertical"-->
+<!--                    android:layout_margin="8dp"-->
+<!--                    android:lines="1"-->
+<!--                    android:textSize="16sp"-->
+<!--                    android:text='@{`` + data.distanceInMeters + " m"}'/>-->
+
+<!--            <View-->
+<!--                    style="@style/Divider"-->
+<!--                    android:id="@+id/divider"-->
+<!--                    android:layout_marginTop="@dimen/text_margin"/>-->
+
+<!--        </LinearLayout>-->
+
+
+<!--    </LinearLayout>-->
 </layout>
