--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,19 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="blueGrayDarkVariant">#1f2c3d</color>
+    <color name="blueGrayDark">#1a2533</color>
+    <color name="blueGrayDarker">#151d29</color>
+    <!--<color name="blueGrayLightVariant">#718094</color>-->
+    <!--<color name="blueGrayLight">#5d6e85</color>-->
+    <color name="green">#1ed760</color>
+    <color name="greenTransparent">#201ed760</color>
+    <color name="greenVariant">#1db954</color>
+    <!--<color name="redLight">#cf6679</color>-->
+    <color name="redDark">#C62828</color>
+    <color name="grayLight">#C0C0C0</color>
+    <color name="grayTransparent">#40C0C0C0</color>
+    <!--<color name="grayDark">#202020</color>-->
+    <!--<color name="black">#FF000000</color>-->
+    <color name="white">#FFFFFFFF</color>
 </resources>
